# local-ancestry-benchmark

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: data_prep.py  evaluation.py  parsers.py  runners.py  simulation.py  visualization.py
